# biostat-autoresearch

./: .gitignore  LICENSE  README.md  analysis.py  karpathy-autoresearch.md  paper.html  paper.md  prepare.py  protocol.md  pyproject.toml  run_experiment.py
tests/: test_analysis.py  test_prepare.py  test_runner.py
